# AI4Everyone-Rescue

./: .gitignore  Health and Safety Guildelines.md  README.md  System Setup.md
CAD Files/: QuadAdapter2.SLDPRT  QuadAdapter2.f3d  QuadAdapter2_Assembled.SLDASM  QuadAdapter2_Bottom.SLDPRT  QuadAdapter3.SLDPRT  QuadAdapter3.f3d  QuadAdapter3_Assembled.SLDASM  QuadAdapter3_Bottom.SLDPRT  QuadAdapters4.f3d
Guides/: Coding Style Guide.md  Create Custom Victim Dataset.md  Getting Started on Go2  Getting Started on Go2.md  Git Basics.md  GitHub Guide.md  Installing ROS and Gazebo.md  Latex Basics.md  MuJoCo Setup Guide.md  Physical Go2 Connection.md  ROS Basics.md  Running Ubuntu.md  Terrain Tool Guide.md
Maps/: README.md
Maps/Mapping/: mapping_basic.xml
go2_ws/src/go2_mapping/: CMakeLists.txt  package.xml  setup.py
go2_ws/src/go2_mapping/config/: mapper_params_online_async.yaml
go2_ws/src/go2_mapping/launch/: go2_mapping.launch.py  go2_slam.launch.py
go2_ws/src/go2_mapping/launch/config/: mapper_params_online_sync.yaml
go2_ws/src/go2_mapping/rviz/: go2_mapping.rviz
go2_ws/src/go2_mapping/src/: dds_to_ros2_bridge.cpp
go2_ws/src/interfaces/: CMakeLists.txt  package.xml
go2_ws/src/interfaces/srv/: Position.srv
go2_ws/src/movement/: CMakeLists.txt  package.xml
go2_ws/src/movement/launch/: movement_launch.py
go2_ws/src/movement/src/: keyboard_control.cpp  move_to_location.cpp  path_planning.cpp
go2_ws/src/unitree_slam_interface/: CMakeLists.txt  package.xml  setup.py
go2_ws/src/unitree_slam_interface/msg/: QtCommand.msg
go2_ws/src/unitree_slam_interface/src/: slam_mapping_client.py
