<?xml version="1.0"?>
<package format="3">
  <name>go2_mapping</name>
  <version>0.1.0</version>
  <description>Mapping package for Go2 robot</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>unitree_sdk2</build_depend>
  <build_depend>slam_toolbox</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>
  <build_depend>ament_index_python</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>unitree_sdk2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
